@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.whydah.identity</groupId>
-    <artifactId>UserAdminWebapp</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <artifactId>UserAdminWebApp</artifactId>
+    <version>2.0.20-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>UserAdminWebapp</name>
-    <url>https://wiki.cantara.no/display/iam/UserAdminWebapp</url>
+    <name>UserAdminWebApp</name>
+    <url>https://wiki.cantara.no/display/iam/UserAdminWebApp</url>
 
     <developers>
         <developer>
@@ -45,6 +45,7 @@
   </scm>
 
     <properties>
+        <service.name>Whydah-UserAdminWebapp</service.name>
         <jersey.version>1.14</jersey.version>
         <spring.version>3.0.5.RELEASE</spring.version>
         <jetty.version>7.3.0.v20110203</jetty.version>
@@ -215,17 +216,97 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--Create Windows, and Unix/Linux installation scripst -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>appassembler-maven-plugin</artifactId>
+                <version>1.8.1</version>
+                <configuration>
+                    <repositoryLayout>flat</repositoryLayout>
+                    <includeConfigurationDirectoryInClasspath>false</includeConfigurationDirectoryInClasspath>
+                    <target>${project.build.directory}</target>
+                    <daemons>
+                        <daemon>
+                            <id>${project.name}</id>
+                            <mainClass>net.whydah.identity.ServerRunner</mainClass>
+                            <platforms>
+                                <platform>jsw</platform>
+                            </platforms>
+                            <generatorConfigurations>
+                                <generatorConfiguration>
+                                    <generator>jsw</generator>
+                                    <includes>
+                                        <!--<include>windows-x86-32</include>-->
+                                        <include>windows-x86-64</include>
+                                    </includes>
+                                    <configuration>
+                                        <property>
+                                            <name>configuration.directory.in.classpath.first</name>
+                                            <value>config_override</value>
+                                        </property>
+                                        <property>
+                                            <name>set.default.REPO_DIR</name>
+                                            <value>lib</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.logfile</name>
+                                            <value>logs/wrapper.log</value>
+                                        </property>
+
+                                        <property>
+                                            <name>wrapper.console.title</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.ntservice.name</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                        <property>
+                                            <name>wrapper.ntservice.displayname</name>
+                                            <value>${service.name}</value>
+                                        </property>
+                                    </configuration>
+                                </generatorConfiguration>
+                            </generatorConfigurations>
+                            <jvmSettings>
+                                <initialMemorySize>32M</initialMemorySize>
+                                <maxMemorySize>512M</maxMemorySize>
+                                <extraArguments>
+                                    <extraArgument>-XX:PermSize=32m</extraArgument>
+                                    <extraArgument>-XX:MaxPermSize=32m</extraArgument>
+                                    <extraArgument>-DIAM_MODE=PROD</extraArgument>
+                                    <extraArgument>-DIAM_CONFIG=config_override/useradministration.PROD.properties</extraArgument>
+                                    <!--<extraArgument>-Dlogback.configurationFile=file:config_override/logback.xml</extraArgument>-->
+                                </extraArguments>
+                            </jvmSettings>
+                        </daemon>
+                    </daemons>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>generate-jsw-scripts</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>generate-daemons</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
-                        <descriptor>src/main/assembly/winservice.xml</descriptor>
+                        <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>assemble-zip</id>
                         <phase>package</phase>
-                        <goals><goal>single</goal></goals>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
